--- a/index.html
+++ b/index.html
@@ -1,41 +1,39 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-<h1>Hello world</h1>
-<h2>Hello world</h2>
-<h3>Hello world</h3>
-<h4>Hello world</h4>
-<h5>Hello world</h5>
-<h6>Hello world</h6>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="css/styles.css">
+        <title>Document</title>
+    </head>
+    <body>
+         <h1>Hello world</h1>
+        <h2>Hello world</h2>
+        <h3>Hello world</h3>
+        <h4>Hello world</h4>
+        <h5>Hello world</h5>
+        <h6>Hello world</h6>
 
-<!-- This is a paragraph -->
-<p>This is a paragraph in learning HTML programming language</p>
+        <!-- This is a paragraph -->
+        <p>This is a paragraph in learning HTML programming language</p>
 
-<!-- This is an odered list -->
-<ol>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>GIT</li>
-    <li>GITHUB</li>
-</ol>
-    
+        <!-- This is an odered list -->
+        <ol>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>GIT</li>
+            <li>GITHUB</li>
+        </ol>
 
+        <!-- This is an odered list -->
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>GIT</li>
+            <li>GITHUB</li>
+        </ul>
 
-<!-- This is an odered list -->
-<ul>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>GIT</li>
-    <li>GITHUB</li>
-</ul>
-
-<img src="picture.jfif" alt="An image of a dog">
-</body>
+        <img src="img/picture.jfif" alt="An image of a dog" />
+        <img src="black dog" alt="A black dog" width="50">
+    </body>
 </html>
